Update About Me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -72,7 +72,7 @@
 								Later in secondary school, I was introduced to my first real programming language: Python.<br /><br />
 
 								After school, I pursued a BTEC in college where I was introduced to C# and Unity and gained a strong foundation in computer science.<br />
-								I studied subjects such as computer hardware, basic networking, web development, Java, assembly, and Excel.<br /><br />
+								I studied subjects such as computer hardware, basic networking, web development, Javascript, assembly, and Excel.<br /><br />
 
 								I then went on to university to specialise in game programming.<br />
 								There, I had the opportunity to work in collaborative teams on multiple projects and met some amazing people who helped shape my development journey.<br />
