--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									Your browser does not support the video tag.
 								</video>
 							</span>
-							<a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">
+							<a href="Lewis Mitchell 2025.pdf" target="_blank" rel="noopener noreferrer">
 								<h2>Resumé</h2>
 								<div class="content">
 									<p>View my skills and qualifications in one place</p>
