--- a/CupCatch.html
+++ b/CupCatch.html
@@ -42,19 +42,15 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="ProgrammingProjects.html">Projects</a></li>
 							<li><a href="AboutMe.html">About Me</a></li>
-							<li><a href="Education.html">Education</a></li>
-							<li><a href="Resumé.html">Resumé</a></li>
-							<li><a href="3DArt.html">3D Art</a></li>
-							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
+							<li><a href="Lewis Mitchell 2025.pdf" target="_blank" rel="noopener noreferrer">Resumé</a></li>
 						</ul>
 						<h2>Projects</h2>
 						<ul>
 							<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
 							<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
 							<li><a href="Conjoined.html">Conjoined</a></li>
-							<li><a href="RippleDefence.html">Ripple Defence</a></li>
+							<li><a href="LifeTide.html">Life Tide</a></li>
 							<li><a href="CupCatch.html">Cup Catch</a></li>
-							<li><a href="LootGenerationSystems.html">Loot Generation Systems</a></li>
 						</ul>
 					</nav>
 
