--- a/LifeTide.html
+++ b/LifeTide.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Programming Projects</title>
+		<title>Life Tide</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,93 +49,140 @@
 					<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
 					<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
 					<li><a href="Conjoined.html">Conjoined</a></li>
+					<li><a href="LifeTide.html">Life Tide</a></li>
 				</ul>
 			</nav>
 
 			<!-- Main -->
 			<div id="main">
 				<div class="inner">
-					<header>
-						<h1>Projects</h1>
-						<p>Projects that I've worked on</p>
-					</header>
-					<section class="tiles">
-						<article class="style1">
-							<span class="image">
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/ProjectPagePreview.mp4" type="video/mp4">
-									Your browser does not support the video tag.
-								</video>
-							</span>
-							<a href="AbyssalDread.html">
-								<h2>Abyssal Dread</h2>
-								<div class="content">
-									<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of a prison, filled with otherworldly enemies</p>
-								</div>
-							</a>
-						</article>
-						<article class="style1">
-							<span class="image">
-								<video autoplay loop muted playsinline>
-									<source src="videos/BitterExtinction/ProjectPagePreview.mp4" type="video/mp4">
-									Your browser does not support the video tag.
-								</video>
-							</span>
-							<a href="BitterExtinction.html">
-								<h2>Bitter Extinction</h2>
-								<div class="content">
-									<p>A tower defence shooter, with a dieselpunk aesthetic. You are commissioned with fortifying an abandoned mining colony. The catch is this glacial planet is home to metal devouring creatures, evolving as they feast on your defences. Extinction is the only way</p>
-								</div>
-							</a>
-						</article>
-						<article class="style1">
-							<span class="image">
-								<video autoplay loop muted playsinline>
-									<source src="videos/Conjoined/ProjectPagePreview.mp4" type="video/mp4">
-									Your browser does not support the video tag.
-								</video>
-							</span>
-							<a href="Conjoined.html">
-								<h2>Conjoined</h2>
-								<div class="content">
-									<p>A combat adventure game filled with challenging puzzles. You must gather a key from a gigantic killer robot called a hattertron; programmed by Odious Keith. Destroying it will drop a key allowing you to enter Odious Keith's castle</p>
-								</div>
-							</a>
-						</article>
-						<!--<article class="style1">
-					<span class="image">
-						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					</span>
-					<a href="RippleDefence.html">
-						<h2>Ripple Defence</h2>
-						<div class="content">
-							<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
-						</div>
+					<h1>Life Tide</h1>
+					<div class="video-container">
+						<iframe width="1120" height="630"
+								src="https://www.youtube.com/embed/XIMLoLxmTDw"
+								frameborder="0" allowfullscreen>
+						</iframe>
+					</div>
+					<a href="https://lewapp.itch.io/lifetide" class="download-box" target="_blank" rel="noopener noreferrer">
+						<i class="fas fa-cog"></i>
+						<span>Download: Itch.io</span>
 					</a>
-				</article>
-				<article class="style1">
-					<span class="image">
-						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					</span>
-					<a href="generic.html">
-						<h2>Cup Catch</h2>
-						<div class="content">
-							<p>Spin the cup to catch incoming coloured balls to earn points. Get as many points as you can get before losing all your health</p>
+					<div class="project-container">
+						<div class="left-container">
+							<h2>About</h2>
+							<p>​ About </p>
 						</div>
-					</a>
-				</article>
-				<article class="style1">
-					<span class="image">
-						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					</span>
-					<a href="generic.html">
-						<h2>Loot Generation Systems</h2>
-						<div class="content">
-							<p>Some loot generation systems that I have worked on in my freetime</p>
+						<div class="right-container">
+							<h2>Project Info</h2>
+
+							<div class="project-info">
+								<div class="info-item">
+									<i class="fas fa-cogs"></i>
+									<span>Engine: Unity</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-users"></i>
+									<span>Team Size: 1</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-user"></i>
+									<span>Role: Programmer</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-clock"></i>
+									<span>Development Time: 10 Days</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-project-diagram"></i>
+									<span>Project Type: Untitled Game Jam #108</span>
+								</div>
+							</div>
 						</div>
-					</a>
-				</article>-->
-					</section>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Weapon System</h2>
+						<p>
+							info...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Player Controls</h2>
+						<p>
+							info...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Enemy Types</h2>
+						<p>
+							info...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>User Interface</h2>
+						<p>
+							info...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								details...
+							</p>
+						</details>
+					</div>
 				</div>
 			</div>
 
@@ -176,7 +223,6 @@
 					</ul>
 				</div>
 			</footer>
-
 		</div>
 
 		<!-- Scripts -->
