--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="ProgrammingProjects.html">Projects</a></li>
 					<li><a href="AboutMe.html">About Me</a></li>
-					<li><a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">Resumé</a></li>
+					<li><a href="Lewis Mitchell 2025.pdf" target="_blank" rel="noopener noreferrer">Resumé</a></li>
 				</ul>
 				<h2>Projects</h2>
 				<ul>
