New sub section for projects with no full page yet
Started work on LifeTide Page

--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -49,6 +49,7 @@
 					<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
 					<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
 					<li><a href="Conjoined.html">Conjoined</a></li>
+					<li><a href="https://lewapp.itch.io/portal-test-114" target="_blank">Portal Test 114</a></li>
 				</ul>
 			</nav>
 
@@ -57,7 +58,7 @@
 				<div class="inner">
 					<header>
 						<h1>Projects</h1>
-						<p>Projects that I've worked on</p>
+						<p>Projects explored beyond the surface</p>
 					</header>
 					<section class="tiles">
 						<article class="style1">
@@ -102,39 +103,31 @@
 								</div>
 							</a>
 						</article>
-						<!--<article class="style1">
-					<span class="image">
-						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					</span>
-					<a href="RippleDefence.html">
-						<h2>Ripple Defence</h2>
-						<div class="content">
-							<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
-						</div>
-					</a>
-				</article>
-				<article class="style1">
-					<span class="image">
-						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					</span>
-					<a href="generic.html">
-						<h2>Cup Catch</h2>
-						<div class="content">
-							<p>Spin the cup to catch incoming coloured balls to earn points. Get as many points as you can get before losing all your health</p>
-						</div>
-					</a>
-				</article>
-				<article class="style1">
-					<span class="image">
-						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-					</span>
-					<a href="generic.html">
-						<h2>Loot Generation Systems</h2>
-						<div class="content">
-							<p>Some loot generation systems that I have worked on in my freetime</p>
-						</div>
-					</a>
-				</article>-->
+
+					</section>
+
+					<header class="style1">
+						<h2>Additional Projects</h2>
+						<p>Completed work presented in brief</p>
+					</header>
+
+					<section class="tiles">
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/PortalTest114/ProjectPagePreview.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="https://lewapp.itch.io/portal-test-114" target="_blank">
+								<h2>Portal Test 114</h2>
+								<div class="content">
+									<p>
+										Made in 10 days for The Untitled Game Jam #114. Portal Test 114 is a puzzle game where you bend space and use logic to escape a series of unsettling test chambers. Use portals and your mind to overcome each challenge.
+									</p>
+								</div>
+							</a>
+						</article>
 					</section>
 				</div>
 			</div>
