--- a/LifeTide.html
+++ b/LifeTide.html
@@ -59,7 +59,7 @@
 					<h1>Life Tide</h1>
 					<div class="video-container">
 						<iframe width="1120" height="630"
-								src="https://www.youtube.com/embed/XIMLoLxmTDw"
+								src="https://www.youtube.com/embed/f8fIVv_edac"
 								frameborder="0" allowfullscreen>
 						</iframe>
 					</div>
@@ -70,7 +70,11 @@
 					<div class="project-container">
 						<div class="left-container">
 							<h2>About</h2>
-							<p>​ About </p>
+							<p>
+								LifeTide is a game I developed for the 108th Untitled Game Jam, where I had 10 days to create a game based on the theme "Fight for Your Life." 
+								I took the theme literally by designing a mechanic that lets players restore health each time they hit an enemy. The game was well received, 
+								earning 1st rank for Use of Theme and 2nd rank for Gameplay.
+							</p>
 						</div>
 						<div class="right-container">
 							<h2>Project Info</h2>
@@ -103,7 +107,7 @@
 					<div class="mainInfo">
 						<h2>Weapon System</h2>
 						<p>
-							info...
+							The weapon system was the most complex part of the game as the system had to be able to make each weapon play differently from each other.
 						</p>
 
 						<details class="video-dropdown">
