Lifetide box added to project page

--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -50,6 +50,7 @@
 					<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
 					<li><a href="Conjoined.html">Conjoined</a></li>
 					<li><a href="https://lewapp.itch.io/portal-test-114" target="_blank">Portal Test 114</a></li>
+					<li><a href="https://lewapp.itch.io/lifetide" target="_blank">LifeTide</a></li>
 				</ul>
 			</nav>
 
@@ -106,10 +107,10 @@
 
 					</section>
 
-					<header class="style1">
+					<section class="subSection">
 						<h2>Additional Projects</h2>
 						<p>Completed work presented in brief</p>
-					</header>
+					</section>
 
 					<section class="tiles">
 						<article class="style1">
@@ -124,6 +125,23 @@
 								<div class="content">
 									<p>
 										Made in 10 days for The Untitled Game Jam #114. Portal Test 114 is a puzzle game where you bend space and use logic to escape a series of unsettling test chambers. Use portals and your mind to overcome each challenge.
+									</p>
+								</div>
+							</a>
+						</article>
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/LifeTide/ProjectPagePreview.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="https://lewapp.itch.io/lifetide" target="_blank">
+								<h2>Life Tide</h2>
+								<div class="content">
+									<p>
+										Made in 10 days for The Untitled Game Jam #108. Lifetide is a fast-paced 2D top-down slasher where survival is the goal. Battle endless hordes of enemies using one of three distinct melee weapons, each with its own  playstyle. 
+										Every hit restores your health.
 									</p>
 								</div>
 							</a>
